--- a/week3/Dockerfile.jetson
+++ b/week3/Dockerfile.jetson
@@ -28,3 +28,5 @@ RUN apt-get install -y python3-dev python3-tk python3-numpy python3-pip
 
 # Documentation:
 RUN apt-get install -y doxygen
+
+COPY ./streamer.py .
